<resources>
    <string name="app_name">loginAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loogin">¡Loogin!</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate_aqu">Registrate aquí.</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
</resources>