<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/md_theme_light_primary"
        android:text="@string/loogin"
        android:textSize="45sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.02"
        android:hint="@string/correo"
        app:errorEnabled="true"
        app:startIconContentDescription="string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        android:layout_weight="0.001"
        android:hint="@string/contrase_a">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_contrasenia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/layout_recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.003"
        android:gravity="right"
        />
    <LinearLayout
        android:id="@+id/layout_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.02"
        android:gravity="center"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_una_cuenta"
            android:textSize="15sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_irLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="irRegistro"
            android:text="@string/registrate_aqu"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="0.002"
        android:backgroundTint="#E68484"
        android:text="@string/iniciar_sesion" />
</LinearLayout>
